# planning-convention

./: .gitignore  APPLY.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  convention.md  index.py  pyproject.toml
.github/workflows/: check.yml
docs/superpowers/plans/: 2026-06-27-index-tests.md
docs/superpowers/specs/: 2026-06-27-index-tests-design.md
tests/: conftest.py  test_check.py  test_load.py  test_main.py  test_parse_frontmatter.py  test_render.py
